# aluminum-rs

./: .codecov.yml  .envrc  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  test.rb
.cargo/: config
Docker/: Dockerfile
ci/: check_code_coverage.sh
ci/docker/: Dockerfile
docker/: Dockerfile
src/: commands.rs  config.rs  generation.rs  lib.rs  main.rs
tests/: lib.rs
tests/fixtures/all-files/: index.css
tests/fixtures/clean/: test.md
tests/fixtures/config/: default.yml
tests/fixtures/default-project/_site/: test.html
tests/fixtures/enhanced-project/_site/: enhanced.html
tests/fixtures/responses/: 404.html
tests/fixtures/serve-bad-route/: _config.yml
tests/fixtures/serve-project-multiple-pages/_site/: index.html
tests/fixtures/serve-project-multiple-pages/pages/: index.md  page.md
tests/fixtures/serve-project-non-built/pages/: index.md
tests/fixtures/serve-simple-project-built/: _config.yml
tests/fixtures/serve-simple-project-built/_site/: index.html
tests/fixtures/serve-simple-project-built/pages/: index.md
tests/fixtures/underscore-files/: _ignored.html
tests/fixtures/underscore-files/_ignoreme/: ignoreme.html
tests/tmp/enhanced-project/pages/: enhanced.md
tests/tmp/serve-project-built/_site/: index.html
tests/tmp/serve-project-multiple/: _config.yml
tests/tmp/serve-project-multiple/_site/: page.html
tests/tmp/serve-project-multiple/pages/: page.md
tests/tmp/serve-project-non-built/_site/: index.html
tests/tmp/serve-project-non-built/pages/: index.md
