[package]
name = "aluminum"
description = "Static site generator"
version = "0.2.0"
authors = ["Eric Dattore <edattore@gmail.com>"]
license = "MIT"
repository = "https://github.com/ELD/Aluminum-rs"

[lib]
name = "aluminum"
path = "src/lib.rs"
test = true

[[bin]]
name = "aluminum"
path = "src/main.rs"
test = false

[dependencies]
clap = "^2.0"
pulldown-cmark = "^0.0"
yaml-rust = "^0.3"

[dev-dependencies]
tempdir = "^0.3"
