[package]
name = "aluminum"
description = "Static site generator"
version = "0.3.0"
authors = ["Eric Dattore <edattore@gmail.com>"]
license = "MIT"
repository = "https://github.com/ELD/Aluminum-rs"

[lib]
name = "aluminum"
path = "src/lib.rs"
test = true

[[bin]]
name = "aluminum"
path = "src/main.rs"
test = false

[dependencies]
clap = "^2"
pulldown-cmark = "^0"
yaml-rust = "^0"
hyper = "^0"
log = "^0"

[dev-dependencies]
tempdir = "^0"
walkdir = "^1"
difference = "^1"
